Fix: Remove unnecessary align-items property from Pill component

--- a/res/css/views/elements/_Pill.pcss
+++ b/res/css/views/elements/_Pill.pcss
@@ -12,7 +12,6 @@ Please see LICENSE files in the repository root for full details.
     border-radius: $font-16px;
     vertical-align: text-top;
     display: inline;
-    align-items: center;
     box-sizing: border-box;
     max-width: 100%;
     overflow: hidden;
